<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/add_report_lab"
            android:text="@string/inspect_report_address" />

        <TextView
            android:id="@+id/inspect_report_address"
            style="@style/add_report_edittext"
            android:text="光谷大道金融港" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/add_report_lab"
            android:text="@string/inspect_report_time" />

        <TextView
            android:id="@+id/inspect_report_time"
            style="@style/add_report_edittext"
            android:text="2017-10-18 20:57" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/add_report_lab"
            android:text="@string/inspect_report_company" />

        <TextView
            android:id="@+id/inspect_report_company"
            style="@style/add_report_edittext"
            android:text="武汉巡查有限公司" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/add_report_lab"
            android:text="@string/inspect_report_check_people" />

        <TextView
            android:id="@+id/inspect_report_check_people"
            style="@style/add_report_edittext"
            android:text="张三、李四、王五" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/add_report_lab"
            android:text="@string/inspect_report_report_people" />

        <TextView
            android:id="@+id/inspect_report_report_people"
            style="@style/add_report_edittext"
            android:text="刘强" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/add_report_lab"
            android:text="@string/inspect_report_build_time" />

        <TextView
            android:id="@+id/inspect_report_build_time"
            style="@style/add_report_edittext"
            android:text="2017-09-26" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/add_report_lab"
            android:text="@string/inspect_report_build_company" />

        <TextView
            android:id="@+id/inspect_report_build_company"
            style="@style/add_report_edittext"
            android:text="武汉建设有限公司" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/add_report_lab"
            android:text="@string/inspect_report_construction_company" />

        <TextView
            android:id="@+id/inspect_report_construction_company"
            style="@style/add_report_edittext"
            android:text="武汉施工有限公司" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/add_report_lab"
            android:text="@string/inspect_report_supervision_company" />

        <TextView
            android:id="@+id/inspect_report_supervision_company"
            style="@style/add_report_edittext"
            android:text="武汉监理有限公司" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/add_report_lab"
            android:text="@string/inspect_report_message" />

        <TextView
            android:id="@+id/inspect_report_message"
            style="@style/add_report_edittext"
            android:text="违章巡查" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/add_report_lab"
            android:text="@string/inspect_report_description" />

        <TextView
            android:id="@+id/inspect_report_description"
            style="@style/add_report_edittext"
            android:text="在光谷中心城1号工地发现违章行为" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/add_report_lab"
            android:text="@string/inspect_report_is_need_recheck" />

        <TextView
            android:id="@+id/inspect_report_recheck"
            style="@style/add_report_edittext"
            android:text="是" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/add_report_lab"
            android:text="@string/inspect_report_recheck_time" />

        <TextView
            android:id="@+id/inspect_report_recheck_time"
            style="@style/add_report_edittext"
            android:text="2017-10-09" />
    </LinearLayout>


    <TextView
        style="@style/add_report_lab"
        android:text="@string/inspect_report_view_attach" />

    <GridView
        android:id="@+id/gridview_view_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></GridView>


</LinearLayout>