<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/add_report_lab"
                    android:text="@string/inspect_report_address" />

                <EditText
                    android:id="@+id/inspect_report_address"
                    style="@style/add_report_edittext" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/add_report_lab"
                    android:text="@string/inspect_report_time" />

                <EditText
                    android:id="@+id/inspect_report_time"
                    style="@style/add_report_edittext" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/add_report_lab"
                    android:text="@string/inspect_report_company" />

                <EditText
                    android:id="@+id/inspect_report_company"
                    style="@style/add_report_edittext" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/add_report_lab"
                    android:text="@string/inspect_report_check_people" />

                <EditText
                    android:id="@+id/inspect_report_check_people"
                    style="@style/add_report_edittext" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/add_report_lab"
                    android:text="@string/inspect_report_report_people" />

                <EditText
                    android:id="@+id/inspect_report_report_people"
                    style="@style/add_report_edittext" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/add_report_lab"
                    android:text="@string/inspect_report_build_time" />

                <EditText
                    android:id="@+id/inspect_report_build_time"
                    style="@style/add_report_edittext" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/add_report_lab"
                    android:text="@string/inspect_report_build_company" />

                <EditText
                    android:id="@+id/inspect_report_build_company"
                    style="@style/add_report_edittext" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/add_report_lab"
                    android:text="@string/inspect_report_construction_company" />

                <EditText
                    android:id="@+id/inspect_report_construction_company"
                    style="@style/add_report_edittext" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/add_report_lab"
                    android:text="@string/inspect_report_supervision_company" />

                <EditText
                    android:id="@+id/inspect_report_supervision_company"
                    style="@style/add_report_edittext" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/add_report_lab"
                    android:text="@string/inspect_report_message" />

                <EditText
                    android:id="@+id/inspect_report_message"
                    style="@style/add_report_edittext" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/add_report_lab"
                    android:text="@string/inspect_report_description" />

                <EditText
                    android:id="@+id/inspect_report_description"
                    style="@style/add_report_edittext" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/add_report_lab"
                    android:text="@string/inspect_report_recheck" />

                <EditText
                    android:id="@+id/inspect_report_recheck"
                    style="@style/add_report_edittext" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/add_report_lab"
                    android:text="@string/inspect_report_recheck_time" />

                <EditText
                    android:id="@+id/inspect_report_recheck_time"
                    style="@style/add_report_edittext" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/add_report_lab"
                    android:text="@string/inspect_report_sub_attach" />

                <EditText
                    android:id="@+id/inspect_report_sub_attach"
                    style="@style/add_report_edittext" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_add_report_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/submit"
                    android:textColor="@color/tab_text_normal" />

                <Button
                    android:id="@+id/btn_add_report_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:textColor="@color/tab_text_normal" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>